[gd_scene load_steps=4 format=3 uid="uid://fs11rnibdwmp"]

[ext_resource type="PackedScene" uid="uid://4emj7t8ke3d7" path="res://Scenes/tail.tscn" id="1_d3y7u"]
[ext_resource type="Script" path="res://Scenes/main.gd" id="1_f8iv3"]
[ext_resource type="PackedScene" uid="uid://b2ag87h8vdk35" path="res://Scenes/tail_variant.tscn" id="2_kfgmc"]

[node name="Main" type="Node"]
script = ExtResource("1_f8iv3")

[node name="MainCamera" type="Camera2D" parent="."]
offset = Vector2(240, 400)

[node name="MainBackground" type="ColorRect" parent="."]
offset_right = 480.0
offset_bottom = 800.0
color = Color(0, 0, 0, 1)

[node name="Tails" type="GridContainer" parent="."]
offset_left = 6.0
offset_top = 6.0
offset_right = 474.0
offset_bottom = 474.0
theme_override_constants/h_separation = 6
theme_override_constants/v_separation = 6
columns = 3

[node name="Tail1" parent="Tails" instance=ExtResource("1_d3y7u")]
visible = false
layout_mode = 2

[node name="Tail2" parent="Tails" instance=ExtResource("1_d3y7u")]
visible = false
layout_mode = 2

[node name="Tail3" parent="Tails" instance=ExtResource("1_d3y7u")]
visible = false
layout_mode = 2

[node name="Tail4" parent="Tails" instance=ExtResource("1_d3y7u")]
visible = false
layout_mode = 2

[node name="Tail5" parent="Tails" instance=ExtResource("1_d3y7u")]
visible = false
layout_mode = 2

[node name="Tail6" parent="Tails" instance=ExtResource("1_d3y7u")]
visible = false
layout_mode = 2

[node name="Tail7" parent="Tails" instance=ExtResource("1_d3y7u")]
visible = false
layout_mode = 2

[node name="Tail8" parent="Tails" instance=ExtResource("1_d3y7u")]
visible = false
layout_mode = 2

[node name="Tail9" parent="Tails" instance=ExtResource("1_d3y7u")]
visible = false
layout_mode = 2

[node name="Variants" type="HBoxContainer" parent="."]
offset_left = 6.0
offset_top = 642.0
offset_right = 474.0
offset_bottom = 794.0
theme_override_constants/separation = 6

[node name="TailVariant1" parent="Variants" instance=ExtResource("2_kfgmc")]
layout_mode = 2

[node name="TailVariant2" parent="Variants" instance=ExtResource("2_kfgmc")]
layout_mode = 2

[node name="TailVariant3" parent="Variants" instance=ExtResource("2_kfgmc")]
layout_mode = 2
